Fixed bug where game wouldn't show on FireFox

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -15,13 +15,17 @@
 
 :root {
     --border-width: 7px;
+    --hexagon-width: calc(300px * 0.225);
+    --hexagon-height: calc(var(--hexagon-width) * 258 / 300);
+
+    --font-size: calc(var(--hexagon-height) / 5);
 }
 
 .border {
     position: relative;
-    zoom: 0.225;
+    /* zoom: 0.225; */
     background-color: black;
-    padding: 200px;
+    padding: calc(var(--hexagon-width) * 2 / 3);
     z-index: 0;
 }
 
@@ -31,8 +35,8 @@
 
 .hexagon {
     position: absolute;
-    width: 300px;
-    height: 258px;
+    width: var(--hexagon-width);
+    height: var(--hexagon-height);
 
     overflow: visible;
 
@@ -55,32 +59,39 @@
 .hexagon>img {
     position: absolute;
     z-index: 1;
+    height: 100%;
 }
 
 .counter {
     display: none;
+    width: max-content;
+
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 70px;
+
+    font-size: var(--font-size);
     text-shadow: 0 0 12px #FFFFFF;
     font-weight: bolder;
+
     pointer-events: none;
     z-index: 1;
+
     background-color: #FFFFFFB0;
-    border: 12px solid #FFFFFF60;
-    border-radius: 30px;
+    border: 6px solid #FFFFFF60;
+    border-radius: 9px;
 }
 
 .counter img {
     vertical-align: middle;
+    height: var(--font-size);
 }
 
 /* -----Menu Styles----- */
 .options {
     position: absolute;
-    top: 258px;
+    top: 100%;
     left: 50%;
     z-index: 5;
     pointer-events: none;
